@@ -132,8 +132,8 @@ _power_cmd_to_oem_power_type_support (power_cmd_t cmd)
       return (OEM_POWER_TYPE_SUPPORT_RESET);
     case POWER_CMD_POWER_STATUS:
       return (OEM_POWER_TYPE_SUPPORT_STATUS);
-    case POWER_CMD_PULSE_DIAG_INTR:
-      return (OEM_POWER_TYPE_SUPPORT_DIAG_INTR);
+    case POWER_CMD_PULSE_DIAGNOSTIC_INTERRUPT:
+      return (OEM_POWER_TYPE_SUPPORT_DIAGNOSTIC_INTERRUPT);
     case POWER_CMD_SOFT_SHUTDOWN_OS:
       return (OEM_POWER_TYPE_SUPPORT_SOFT_SHUTDOWN_OS);
     case POWER_CMD_IDENTIFY_ON:
